Refactor: Remove unused imports and optimize code structure across multiple classes